fix: long numbers no longer overflow on display

--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding: 0 5px;
+    padding: 10px 10px;
     font-size: 25px;
-    width: 250px;
+    max-width: 250px;
     margin-bottom: 5px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .number-container{
